--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="Refresh" content="0; url='preroll.html' />
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="7; url='preroll.html'" />
+  </head>
+  <body>
+    <a href="preroll.html">preroll.html</a>
+  </body>
+</html>
