--- a/preroll.html
+++ b/preroll.html
@@ -24,9 +24,6 @@ td
 </head>
 
 <body>
-<h2>d20</h2>
-<table id="d20" border=1></table>
-<br />
 <h2>d4</h2>
 <table id="d4" border=1></table>
 <br />
@@ -36,12 +33,14 @@ td
 <h2>d8</h2>
 <table id="d8" border=1></table>
 <br />
-<p style="page-break-before: always">
 <h2>d10</h2>
 <table id="d10" border=1></table>
 <br />
-<h2>d12</h2>
+<h2 style="page-break-before: always">d12</h2>
 <table id="d12" border=1></table>
+<br />
+<h2>d20</h2>
+<table id="d20" border=1></table>
 <br />
 <h2>d100</h2>
 <table id="d100" border=1></table>
@@ -64,16 +63,15 @@ function buildTable(table, columns, rows, min, max) {
     }
 }
 
-var rows = 16;
-var columns = 30;
-buildTable(document.getElementById("d20"), columns, rows, 1, 20);
-rows = 8;
+var rows = 8;
+var columns = 25;
 buildTable(document.getElementById("d4"), columns, rows, 1, 4);
 buildTable(document.getElementById("d6"), columns, rows, 1, 6);
 buildTable(document.getElementById("d8"), columns, rows, 1, 8);
-rows = 15;
 buildTable(document.getElementById("d10"), columns, rows, 1, 10);
 buildTable(document.getElementById("d12"), columns, rows, 1, 12);
+rows = 12;
+buildTable(document.getElementById("d20"), columns, rows, 1, 20);
 buildTable(document.getElementById("d100"), columns, rows, 1, 100);
 </script>
 </body>
